# smart-security-camera

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.debug.yml  docker-compose.yml  pyproject.toml  requirements.txt
images/: architecture.drawio
smart_security_camera/: __main__.py
smart_security_camera/config/: settings.py
smart_security_camera/services/: bot.py  detection.py  messages.py  mqtt.py  video.py
smart_security_camera/services/model/: coco.names  get_weight_file.sh
tests/: test_smart_security_camera.py
